@@ -34,6 +34,10 @@ Raw dump of debug contents of section \.debug_line:
   Advance Line by 1 to 7
   Advance PC by fixed size amount .* to .*
   Copy
+  Extended opcode 4: set Discriminator to 1
+  Advance Line by 0 to 7
+  Advance PC by fixed size amount .* to .*
+  Copy
   Advance PC by fixed size amount .* to .*
   Extended opcode 1: End of Sequence
 #...
